--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
       border-radius: 5px;
     }
 
-    input::placeholder {
+    input::placeholder, textarea::placeholder {
       color: #adb5bd;
     }
 
@@ -55,12 +55,12 @@
       caret-color: #abc4ff;
     }
 
-    label[for="description"], label[for="about"]  {
+    label[for^="description"], label[for="about"]  {
       grid-column: 1 / 3;
       margin-bottom: 10px;
     }
 
-    label[for="date"] {
+    label[for^="date"] {
       display: grid;
       grid-template-columns: repeat(2, 1fr), repeat(2, 1fr);
       column-gap: 10px;
@@ -246,12 +246,15 @@
       font-size: 0.75rem;
       border: 2px solid #adb5bd;
       border-radius: 8px;
-  
+      overflow-wrap: break-word;
+
       span {
+        overflow-wrap: break-word;
         font-weight: 200;
       }
   
       svg {
+        min-width: 20px;
         transition: transform 200ms ease-out;
       }
       svg:hover {
@@ -437,7 +440,7 @@
                 margin-bottom: 2px;
 
                 span {
-
+                  grid-column: 2;
                   font-size: 0.5rem;
                   font-weight: 300;
                 }
