--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .editor {
-  padding:  5vh 5vw 12vh;
+  padding: 5vh 5vw 12vh;
 
   h1 {
     width: 100%;
@@ -37,7 +37,8 @@
       font-size: 0.8rem;
     }
 
-    input,textarea {
+    input,
+    textarea {
       background-color: #e9ecef;
       border: none;
       outline: none;
@@ -46,16 +47,19 @@
       border-radius: 5px;
     }
 
-    input::placeholder, textarea::placeholder {
+    input::placeholder,
+    textarea::placeholder {
       color: #adb5bd;
     }
 
-    input:focus, input:hover {
+    input:focus,
+    input:hover {
       outline: 1.5px solid #abc4ff;
       caret-color: #abc4ff;
     }
 
-    label[for^="description"], label[for="about"]  {
+    label[for^="description"],
+    label[for="about"] {
       grid-column: 1 / 3;
       margin-bottom: 10px;
     }
@@ -88,7 +92,6 @@
       input:hover {
         /* outline: none; */
       }
-
     }
 
     textarea {
@@ -112,7 +115,7 @@
       }
 
       button:hover {
-        box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.2)
+        box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.2);
       }
 
       .delete {
@@ -124,27 +127,23 @@
       }
 
       .cancel {
-        border: 1px solid #64B5F6;
+        border: 1px solid #64b5f6;
         background-color: white;
-        color: #64B5F6;
+        color: #64b5f6;
         box-sizing: border-box;
-
       }
 
       .save {
-        background: #64B5F6;
+        background: #64b5f6;
         color: white;
-        border: 1px solid #64B5F6;
+        border: 1px solid #64b5f6;
       }
     }
-
   }
-
 
   #skills {
     display: block;
     ul {
-
       li {
         display: grid;
         align-items: center;
@@ -167,8 +166,6 @@
       }
     }
   }
-
-
 
   #languages {
     display: block;
@@ -198,7 +195,7 @@
   #languagePool {
     button {
       text-align: center;
-      background-color: #ABC4FF;
+      background-color: #abc4ff;
       color: white;
       font-size: 0.8rem;
       padding: 5px 20px;
@@ -208,7 +205,7 @@
       margin-right: 8px;
     }
 
-    button:hover  {
+    button:hover {
       text-decoration: 2px solid white line-through;
     }
   }
@@ -252,7 +249,7 @@
         overflow-wrap: break-word;
         font-weight: 200;
       }
-  
+
       svg {
         min-width: 20px;
         transition: transform 200ms ease-out;
@@ -263,8 +260,6 @@
       }
     }
   }
-
-
 }
 
 .resume {
@@ -280,8 +275,6 @@
     background-color: white;
     height: 842px;
     width: 595px;
-    /* width: 100%;
-    height: 100%; */
 
     .side {
       display: flex;
@@ -330,19 +323,18 @@
         letter-spacing: 0.15rem;
         font-weight: 600;
         margin-bottom: 2px;
-  
+
         span {
           font-size: 2rem;
           letter-spacing: 0.2rem;
           font-weight: 300;
         }
       }
-  
+
       h1 {
         color: var(--resume-color);
-  
       }
-  
+
       > h2 {
         color: var(--resume-color);
         font-size: 0.95rem;
@@ -350,7 +342,7 @@
         font-weight: 400;
         margin-bottom: 5px;
       }
-  
+
       > p {
         font-size: 0.6rem;
         color: #737373;
@@ -368,7 +360,6 @@
           border-bottom: 1px solid var(--resume-color);
           padding-bottom: 4px;
           margin-bottom: 20px;
-          
         }
 
         .cv-box {
@@ -444,13 +435,11 @@
                   font-size: 0.5rem;
                   font-weight: 300;
                 }
-
               }
             }
           }
         }
-  
-    }
+      }
       .cv::before {
         height: calc(100% - 45px);
         position: absolute;
@@ -459,8 +448,8 @@
         background-color: var(--resume-color);
         margin-left: 3.8px;
         margin-top: 52px;
+      }
     }
-  }
   }
 
   #download {
@@ -474,7 +463,8 @@
     justify-content: space-around; */
     height: 35px;
     background-color: rgb(50, 54, 57);
-    box-shadow: 0 -2px 8px rgba(0, 0, 0, .09), 0 4px 8px rgba(0, 0, 0, .06), 0 1px 2px rgba(0, 0, 0, .3), 0 2px 6px rgba(0, 0, 0, .15);
+    box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.09), 0 4px 8px rgba(0, 0, 0, 0.06),
+      0 1px 2px rgba(0, 0, 0, 0.3), 0 2px 6px rgba(0, 0, 0, 0.15);
     width: inherit;
 
     .colors {
@@ -483,15 +473,25 @@
       gap: 5px;
 
       .color {
+        z-index: -1;
         height: 20px;
         width: 20px;
         border: 2px solid white;
         border-radius: 50%;
+        animation: slide-in 1000ms;
       }
-  
+
       .c-selector {
-        background: linear-gradient(in hsl longer hue 45deg, rgb(178, 29, 29) 0 0);
+        z-index: 1;
+        background: linear-gradient(
+          in hsl longer hue 45deg,
+          rgb(178, 29, 29) 0 0
+        );
         margin-right: 10px;
+        height: 20px;
+        width: 20px;
+        border: 2px solid white;
+        border-radius: 50%;
       }
     }
 
@@ -509,6 +509,14 @@
     button:hover {
       transform: scale(1.2);
     }
+  }
+}
 
+@keyframes slide-in {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(0%);
   }
 }
